--- a/FuncGodot Manual/pages/guide_install.html
+++ b/FuncGodot Manual/pages/guide_install.html
@@ -28,7 +28,7 @@
         <p>
             FuncGodot directly supports the following editors with configuration resources:
             <ul>
-                <li>TrenchBroom 2024</li>
+                <li>TrenchBroom 2025</li>
                 <li>NetRadiant Custom 1.6</li>
             </ul>
         </p>
@@ -58,7 +58,8 @@
         <p align="center"><img src="../images/guide_install_github_releases.png" height="400" alt="An image displaying where to find the GitHub Stable Release. It shows a circled location on the right side of the GitHub repository page that says 'Releases'."></p>
         <p>
             The final location is the Godot Asset Library. While the intent is to keep the Asset Library release in line with the GitHub Stable Release, 
-            sometimes these releases can be "desynced" for one reason or another. We're a small team of volunteers here, so please be patient with us!
+            sometimes these releases can be "desynced" for one reason or another. We're a small team of volunteers here, so please be patient with us! 
+            If you're finding some bugs or issues with the Asset Library release, try downloading the plugin from one of the other two locations.
         </p>
         <p>
             Our intent is to keep the Stable Releases as reliable as possible, so typically only critical fixes will be pushed with some urgency while new features or 
