--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -426,6 +426,15 @@
                     prioritizing the key value pairs in that order. Set to <i>false</i> if you would like to define how the generated node is rotated yourself.
                 </td>
             </tr>
+            <tr>
+                <td>Apply Scale On Map Build</td>
+                <td>Bool</td>
+                <td>
+                    Toggles whether entity will use `scale` to determine the generated node or scene's scale. 
+                    This is performed on the top level node. The property can be a <i>float</i>, <i>Vector3</i>, or <i>Vector2</i>. 
+                    Set to <i>false</i> if you would like to define how the generated node is scaled yourself.
+                </td>
+            </tr>
         </table>
 
         <br><hr>
