--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -44,6 +44,7 @@
         <p class="sidenav2">
             <a href="guide_building_maps.html#InverseScaleFactor" target="main">Inverse Scale Factor</a><br>
             <a href="guide_building_maps.html#TrenchbroomHierarchy" target="main">TrenchBroom Groups Hierarchy</a><br>
+            <a href="guide_building_maps.html#DefaultMapSettings" target="main">Default Map Settings</a><br>
             <a href="guide_building_maps.html#Building" target="main">Building</a>
         </p>
 
