Added core class references

--- a/FuncGodot Manual/pages/ref_func_godot_map.html
+++ b/FuncGodot Manual/pages/ref_func_godot_map.html
@@ -7,7 +7,7 @@
 </head>
 <body class="main">
     <div class="main">
-        <h1>FuncGodot Map Node</h1>
+        <h1>FuncGodotMap</h1>
         <p><img src="../images/ref_func_godot_map.png"></p>
         <p>
             A scene generator node that parses a Quake map file using a <a href="ref_fgd_resources.html#File" target="main">FuncGodotFGDFile</a>. 
@@ -42,22 +42,22 @@
             </tr>
         </table>
         
-        <h3>Functions</h3>
+        <h3>Methods</h3>
         <table class="props">
             <tr class=""header>
-                <td>Function</td>
+                <td>Method</td>
                 <td>Description</td>
                 <td>Return type</td>
             </tr>
             <tr>
                 <td>verify_and_build()</td>
                 <td>Verify that FuncGodot is functioning and that <code>map_file</code> exists. If so, build the map. If not, signal <code>build_failed</code></td>
-                <td>void</td>
+                <td>Void</td>
             </tr>
             <tr>
                 <td>unwrap_uv2(node: Node = null)</td>
                 <td>Recursively unwrap UV2s for <code>node</code> and its children, in preparation for baked lighting.</td>
-                <td>void</td>
+                <td>Void</td>
             </tr>
         </table>
 
