--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -86,14 +86,13 @@
         <p class="sidenav2">
             <a href="ref_func_godot_map.html#MapSettings" target="main">FuncGodot Map Settings</a>
         </p>
-        <!--<h3 class="sidenav">Core Classes</h3>
+        <h3 class="sidenav">Build Process</h3>
         <p class="sidenav">
-            <a href="core_func_godot.html" target="main">FuncGodot</a><br>
-            <a href="core_map_data.html" target="main">Map Data</a><br>
-            <a href="core_map_parser.html" target="main">Map Parser</a><br>
-            <a href="core_geo_generator.html" target="main">Geo Generator</a><br>
-            <a href="core_surface_gatherer.html" target="main">Surface Gatherer</a>
-        </p>-->
+            <a href="build_process.html#Map" target="main">Map</a><br>
+            <a href="build_process.html#Parser" target="main">Parse</a><br>
+            <a href="build_process.html#GeoGen" target="main">Geometry Generation</a><br>
+            <a href="build_process.html#Ent" target="main">Entity Assembly</a>
+        </p>
         <h3 class="sidenav">Tips and Tricks</h3>
         <p class="sidenav">
             <a href="tips_naming.html" target="main">Naming Patterns</a><br>
