--- a/FuncGodot Manual/pages/guide_install.html
+++ b/FuncGodot Manual/pages/guide_install.html
@@ -39,7 +39,7 @@
             </ul>
         </p>
         <p>
-            FuncGodot is designed to be as map editor agnostic as possible. If you use an editor that can output Quake or Half-Life 1 format map files, 
+            FuncGodot is designed to be as map editor agnostic as possible. If you use an editor that can output Quake or Half-Life format map files, 
             please let us know on GitHub or Discord so we can try our best to either support it directly or document the configuration process!
         </p>
         <br>
