--- a/FuncGodot Manual/pages/ref_data.html
+++ b/FuncGodot Manual/pages/ref_data.html
@@ -15,7 +15,6 @@
         <p>
             All data structs extend from RefCounted, therefore all data is passed by reference.
         </p>
-        <br>
 
         <h2 id="face">FuncGodot FaceData</h2>
         <p>
@@ -239,7 +238,7 @@
 
         <br><hr>
 
-        <h2 id="group">FuncGodotEntityData</h2>
+        <h2 id="entity">FuncGodotEntityData</h2>
         <p>
             Data struct representing a map format entity.
         </p>
@@ -328,7 +327,7 @@
 
         <h3>Methods</h3>
         <table class="props">
-            <tr class=""header>
+            <tr class="header">
                 <td>Method</td>
                 <td>Description</td>
                 <td>Return type</td>
