--- a/FuncGodot Manual/pages/ref_ent_assembler.html
+++ b/FuncGodot Manual/pages/ref_ent_assembler.html
@@ -7,11 +7,11 @@
 </head>
 <body class="main">
     <div class="main">
-        <h1>FuncGodot Entity Assembler</h1>
+        <h1>FuncGodotEntityAssembler</h1>
         <p>
-            Entity assembly class that is instantiated by a <a href="ref_func_godot_map.html" target="main">FuncGodot Map</a> node. 
+            Entity assembly class that is instantiated by a <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node.
         </p>
-        <br>
+        
         <h3>Signals</h3>
         <table class="props">
             <tr class="header">
@@ -29,93 +29,55 @@
         </table>
         
         <h3>Methods</h3>
-        <!-- Tools -->
         <table class="props">
-            <tr class=""header>
+            <tr class="header">
                 <td>Method</td>
                 <td>Description</td>
                 <td>Return type</td>
             </tr>
             <tr>
-                <td>is_skip(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
+                <td>get_script_by_class_name(name_of_class: String)</td>
+                <td>Attempts to retrieve a script via class name, to allow for GDScript class instantiation.</td>
+                <td>Script</td>
             </tr>
             <tr>
-                <td>is_clip(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
+                <td>generate_group_node(group_data: GroupData)</td>
+                <td>Generates a Node3D for a group's SceneTree representation and links the new Node3D to that group.</td>
+                <td>Node3D</td>
             </tr>
             <tr>
-                <td>is_origin(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
-            </tr>
-        </table>
-        <br>
-        <!-- Patches -->
-        <table class="props">
-            <tr>
-                <td>sample_bezier_curve(controls: Array[Vector3], t: float)</td>
-                <td></td>
-                <td>Vector3</td>
+                <td>generate_solid_entity_node(node: Node, node_name: String, data: EntityData, definition: FuncGodotFGDSolidClass)</td>
+                <td>
+                    Generates and assembles a new Node based upon processed entity data. Depending upon provided data, 
+                    additional MeshInstance3D, CollisionShape3D, and OccluderInstance3D nodes may also be generated.
+                </td>
+                <td>Node</td>
             </tr>
             <tr>
-                <td>sample_bezier_surface(controls: Array[Vector3], width: int, height: int, u: float, v: float)</td>
-                <td></td>
-                <td>Vector3</td>
+                <td>generate_point_entity_node(node: Node, node_name: String, properties: Dictionary, definition: FuncGodotFGDPointClass)</td>
+                <td>Generates and assembles a new Node or PackedScene based upon processed entity data.</td>
+                <td>Node</td>
             </tr>
             <tr>
-                <td>get_triangle_indices(width: int, height: int)</td>
-                <td></td>
-                <td>Array[int]</td>
-            </tr>
-            <tr>
-                <td>create_patch_mesh(data: array[PatchData], mesh: Mesh)</td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-        <br>
-        <!-- Brushes -->
-        <table class="props">
-            <tr>
-                <td>generate_brush_vertices(entity_index: int, brush_index: int)</td>
-                <td></td>
+                <td>apply_entity_properties(node: Node, data: EntityData)</td>
+                <td>
+                    Converts the String values of the entity data's <i>properties</i> Dictionary to various Variant formats 
+                    based upon the entity definition's class properties, then attempts to send those properties to a <i>func_godot_properties</i> Dictionary 
+                    and an <i>apply_func_godot_properties()</i> method on the node. A deferred call to <i>build_complete()</i> is also made.
+                </td>
                 <td>Void</td>
             </tr>
             <tr>
-                <td>generate_entity_vertices(entity_index: int)</td>
-                <td></td>
-                <td>Void</td>
+                <td>generate_entity_node(entity_data: EntityData, entity_index: int)</td>
+                <td>Generate a node from entity data. The returned node value can be null, in the case of Solid Class entities with no brush data.</td>
+                <td>Error</td>
             </tr>
             <tr>
-                <td>determine_entity_origins(entity_index: int)</td>
-                <td></td>
-                <td>Void</td>
-            </tr>
-            <tr>
-                <td>wind_entity_faces(entity_index: int)</td>
-                <td></td>
-                <td>Void</td>
-            </tr>
-            <tr>
-                <td>generate_entity_surfaces(entity_index: int)</td>
-                <td></td>
-                <td>Void</td>
-            </tr>
-            <tr>
-                <td>unwrap_uv2s(entity_index: int, texel_size: float)</td>
-                <td></td>
-                <td>Void</td>
-            </tr>
-        </table>
-        <br>
-        <!-- Main build process -->
-        <table class="props">
-            <tr>
-                <td>build(build_flags: int, entities: Array[EntityData])</td>
-                <td></td>
+                <td>build(map_node: FuncGodotMap, entities: Array[EntityData], groups: Array[GroupData])</td>
+                <td>
+                    Main entity assembly process called by the map node. Generates and sorts group nodes in the SceneTree first. 
+                    Then generates and assembles nodes based upon the provided entity data and adds them to the SceneTree.
+                </td>
                 <td>Error</td>
             </tr>
         </table>
