--- a/FuncGodot Manual/pages/ref_parser.html
+++ b/FuncGodot Manual/pages/ref_parser.html
@@ -7,11 +7,11 @@
 </head>
 <body class="main">
     <div class="main">
-        <h1>FuncGodot Parser</h1>
+        <h1>FuncGodotParser</h1>
         <p>
-            Geometry generation class that is instantiated by a <a href="ref_func_godot_map.html" target="main">FuncGodot Map</a> node. 
+            MAP and VMF parser class that is instantiated by a <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node.
         </p>
-        <br>
+
         <h3>Signals</h3>
         <table class="props">
             <tr class="header">
@@ -36,19 +36,22 @@
                 <td>Return type</td>
             </tr>
             <tr>
-                <td>is_skip(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
+                <td>parse_map_data(map_file: String, map_settings: FuncGodotMapSettings)</td>
+                <td>
+                    Parses the map file, generating entity and group data and sub-data, then returns the generated data as an array of arrays. 
+                    The first array is <i>Array[FuncGodotEntityData]</i>, while the second array is <i>Array[FuncGodotGroupData]</i>. 
+                </td>
+                <td>Array[Array]</td>
             </tr>
             <tr>
-                <td>is_clip(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
+                <td>_parse_quake_map(map_data: PackedStringArray, map_settings: FuncGodotMapSettings)</td>
+                <td>Parser subroutine called by <code>parse_map_data()</code>, specializing in the Quake MAP format.</td>
+                <td>Array[Array]</td>
             </tr>
             <tr>
-                <td>is_origin(face: FaceData)</td>
-                <td></td>
-                <td>Bool</td>
+                <td>_parse_vmf(map_data: PackedStringArray, map_settings: FuncGodotMapSettings)</td>
+                <td>Parser subroutine called by <code>parse_map_data()</code>, specializing in the VMF format used by Hammer based editors.</td>
+                <td>Array[Array]</td>
             </tr>
         </table>
     </div>
