Manual Update to 2025.8
Core rewrite update. Made some descriptions less vague or more accurate. Added new core classes. Updated some tutorial stuff, helpful links. See diffs for details.

--- a/FuncGodot Manual/pages/helpful_links.html
+++ b/FuncGodot Manual/pages/helpful_links.html
@@ -66,6 +66,11 @@
             Discord server where the best of the best hang out. If you have questions on Quake or TrenchBroom, mapping or modding, 
             the people here can teach you everything you want to know about it.
         </p>
+        <p>
+            <b><a href="https://discord.gg/vSvqwys5hB" target="_blank">Map-Center Discord</a></b><br>
+            Discord server for Quake series mapping, including <i>Quake II</i> and <i>Quake III Arena</i>. 
+            A good resource for various map editors, including NetRadian-Custom.
+        </p>
         <br>
 
         <h2 id="JACK">J.A.C.K. and Half-Life</h2>
