--- a/FuncGodot Manual/pages/ref_func_godot_map.html
+++ b/FuncGodot Manual/pages/ref_func_godot_map.html
@@ -92,6 +92,7 @@
                     <ul>
                         <li><b>Unwrap UV2 :</b> Unwrap UV2s during geometry generation for lightmap baking.</li>
                         <li><b>Show Profiling Info :</b> Print build step information during build process.</li>
+                        <li><b>Disable Smoothing :</b> Force disable processing of vertex normal smooth shading.</li>
                     </ul>
                 </td>
             </tr>
