--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -50,7 +50,8 @@
 
         <h3 class="sidenav">Class Reference</h3>
         <p class="sidenav">
-            <a href="ref_local_config.html" target="main">FuncGodot Local Config</a><br>
+            <a href="ref_local_config.html" target="main">Project Settings</a><br>
+            <a href="ref_local_config.html#LocalConfig" target="main">FuncGodot Local Config</a><br>
             <a href="ref_fgd_resources.html" target="main">FuncGodot FGD Resources</a>
         </p>
         <p class="sidenav2">
