--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>FuncGodot v2025.7 Manual</title>
+    <title>FuncGodot v2025.8 Manual</title>
     <link rel="icon" type="image/x-icon" href="../images/godot_ranger.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -48,7 +48,7 @@
             <a href="https://github.com/EMBYRDEV" target="_blank"><b>Hannah "Embyr" Crawford</b></a>, 
             <a href="https://github.com/DeerTears" target="_blank"><b>Emberlynn Bland</b></a>, and 
             <a href="https://github.com/RhapsodyInGeek" target="_blank"><b>Tim "RhapsodyInGeek" Maccabe</b></a>, 
-            <a href="https://github.com/sinewavey" target="_blank"><b>Vera Lux</b></a>, 
+            <a href="https://github.com/sinewavey" target="_blank"><b>Vera "sinewavey" Lux</b></a>, 
             reworked from the <a href="https://github.com/QodotPlugin/Qodot/tree/main" target="_blank">Godot 4 port of Qodot</a> by Embyr, 
             with contributions from members of the FuncGodot, Qodot, Godot, and Quake Mapping Communities.
         </p>
