--- a/FuncGodot Manual/pages/tips_runtime_building.html
+++ b/FuncGodot Manual/pages/tips_runtime_building.html
@@ -11,11 +11,9 @@
         <p>There are times where you may want to build maps while in the middle of running your game, whether it's for loading levels from map files instead of scenes, procedural generation, or as a way to support user-made maps. Runtime map building can also be combined with map editor launch configurations to provide a largely seamless experience between making a map and seeing it in-game.</p>
         <h2>Setting up Runtime Map Building</h2>
         <p>To build a map at Runtime, start by either using a templated scene with an empty <i>FuncGodotMap</i> or instantiating one. Next you'll need to make sure to set either the <code>local_map_file</code> or <code>global_map_file</code> to your map's file path. Don't use <code>load()</code> here! That will be taken care of in the next step.</p>
-        <p>Once your map file path has been set, you can run the <code>verify_and_build()</code> method from the <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node. When this is done, your map will be built just as it would have been by pressing the <i>Build</i> button in the Editor, along with all of the entity callbacks. Be aware that the <code>Engine.is_editor_hint()</code> conditional will return as false, in case you use it to control properties handling through the FuncGodot entity callbacks.</p>
+        <p>Once your map file path has been set, you can run the <code>build()</code> method from the <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node. When this is done, your map will be built just as it would have been by pressing the <i>Build</i> button in the Editor, along with all of the entity callbacks. Be aware that the <code>Engine.is_editor_hint()</code> conditional will return as false, in case you use it to control properties handling through the FuncGodot entity callbacks.</p>
         <p>When the map builds, it will emit the signals <code>build_complete</code> or <code>build_failed</code>. You can use these signals to handle errors gracefully and to run any post-build code you need to run.</p>
-        <p>If using <a href="https://docs.godotengine.org/en/4.3/tutorials/3d/global_illumination/using_lightmap_gi.html" target="_blank">LightmapGI</a> for your global illumination solution, you can use the <i>FuncGodotMap</i> node's <code>unwrap_uv2()</code> method after receiving the <code>build_complete</code> signal. Once unwrapping has finished, the <i>FuncGodotMap</i> node will emit <code>unwrap_uv2_complete</code>.</p>
-        <blockquote><i>NOTE: Godot 4.3 does not currently support runtime lightmap baking or UV2 unwrapping in exported builds. For now, consider using a different lighting solution for runtime building.<br></i></blockquote>
-        An example of runtime map building is as follows:</p>
+        <p>An example of runtime map building is as follows:</p>
         <pre><code>extends Node
 
 @onready var func_godot_map := $FuncGodotMap as FuncGodotMap
@@ -25,22 +23,16 @@
 func _ready():
     func_godot_map.connect("build_complete", _build_complete)
     func_godot_map.connect("build_failed", _build_failed)
-    func_godot_map.connect("unwrap_uv2_complete", _unwrap_uv2_complete)
     func_godot_map.local_map_file = "res://maps/example.map"
-    func_godot_map.verify_and_build()
+    func_godot_map.build()
 
-# We need to wait for the build to finish before unwrapping mesh UV2s for lightmap baking.
-# Currently lightmap baking cannot be performed at runtime, so it's not terribly useful yet.
-# Consider creating a procedural Voxel GI solid class entity that can be baked at runtime instead.
 func _build_complete() -> void:
-    print("Success! Unwrapping UV2...")
-    func_godot_map.unwrap_uv2()
+    print("Build successful!")
 
 func _build_failed() -> void:
     printerr("Failed to build the map file! :(")
+</code></pre>
 
-func _unwrap_uv2_complete() -> void:
-    print("UV2 unwrapping completed!")</code></pre>
     <p>This example can be found in the <a href="https://github.com/func-godot/func_godot_runtime_building" target="_blank">func_godot_runtime_building repository</a>.</p>
 
     <h1>Building from Map Editors</h1>
@@ -71,7 +63,7 @@ func _ready():
             
             # Apply the argument value to our map node and build!
             func_godot_map.local_map_file = arg_arr[1]
-            func_godot_map.verify_and_build()</code></pre>
+            func_godot_map.build()</code></pre>
     <p>This example can be found in the <a href="https://github.com/func-godot/func_godot_runtime_building" target="_blank">func_godot_runtime_building repository</a>.</p>
     <blockquote><i>NOTE: You can extend this to have more commands like God mode or Debug mode as your game needs, and use them when launching in editor.<br></i></blockquote>
     <h2>Setting Up Your Editor</h2>
